# vidsorter

./: .gitignore  README.md  main.py  pyproject.toml
src/vidsorter/: cli.py
