[project]
name = "vidsorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "yt-dlp>=2025.8.11",
]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
vidsorter = "vidsorter.cli:main"
